[package]
name = "seer_network"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reth-network = { git = "https://github.com/paradigmxyz/reth", branch = "main" }
reth-primitives = { git = "https://github.com/paradigmxyz/reth", branch = "main", features = [
    "test_utils",
] }
reth-provider = { git = "https://github.com/paradigmxyz/reth", branch = "main" }
tokio = { version = "1", features = ["full"] }
