[package]
name = "seer_network"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
reth-network = { git = "https://github.com/paradigmxyz/reth", branch = "main" }
reth-primitives = { git = "https://github.com/paradigmxyz/reth", branch = "main" }
reth-provider = { git = "https://github.com/paradigmxyz/reth", branch = "main", features = [
    "test-utils",
] }
tokio = { version = "1", features = ["full"] }
